force-app/main/default/objects/Event_Allocation__c/Event_Allocation__c.object-meta.xml
<CustomObject>
    <label>Event Allocation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>