force-app/main/default/objects/Event_Allocation__c/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Allocation</label>
    <referenceTo>Allocation__c</referenceTo>
    <relationshipLabel>Event Allocations</relationshipLabel>
    <relationshipName>Event_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>