force-app/main/default/objects/Event_Allocation__c/fields/Campaign_Member_Host__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Host__c</fullName>
    <formula>IF(NOT(ISBLANK( ContactLookup__r.Host_Brisbane__c ) ), ContactLookup__r.Host_Brisbane__r.Host_Name__c  ,
IF(NOT(ISBLANK(  ContactLookup__r.Host_GC__c  ) ),   ContactLookup__r.Host_GC__r.Host_Name__c  ,
 ContactLookup__r.Host_Sydney__r.Host_Name__c  )
)</formula>
    <label>Campaign Member Host</label>
    <type>Text</type>
</CustomField>