force-app/main/default/objects/Event_Allocation__c/fields/ContactLookup__c.field-meta.xml
<CustomField>
    <fullName>ContactLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Allocations</relationshipLabel>
    <relationshipName>Event_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>