force-app/main/default/objects/Event_Allocation__c/fields/fWaitlisted__c.field-meta.xml
<CustomField>
    <fullName>fWaitlisted__c</fullName>
    <formula>ABS( Tech_TotalAttendies__c - Capacity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>