force-app/main/default/objects/Event_Allocation__c/fields/No_of_host__c.field-meta.xml
<CustomField>
    <fullName>No_of_host__c</fullName>
    <label>No. of host</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>