force-app/main/default/objects/Event_Allocation__c/fields/Seat_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Seat_Reserved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seats Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>