force-app/main/default/objects/Event_Allocation__c/fields/Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available__c</fullName>
    <description>Current seats available</description>
    <formula>IF((Capacity__c -  Seats_Reserved_All__c  )&lt; 0 , 0, (Capacity__c -  Seats_Reserved_All__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>