force-app/main/default/objects/Event_Allocation__c/fields/Seats_Available_Tech__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available_Tech__c</fullName>
    <label>Seats Available Tech</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>