force-app/main/default/objects/Event_Allocation__c/fields/Seats_Reserved_All__c.field-meta.xml
<CustomField>
    <fullName>Seats_Reserved_All__c</fullName>
    <formula>No_of_host__c  +  Seat_Reserved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>