force-app/main/default/objects/Event_Allocation__c/fields/Specify_Other__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>