force-app/main/default/objects/Event_Allocation__c/fields/Tech_TotalAttendies__c.field-meta.xml
<CustomField>
    <fullName>Tech_TotalAttendies__c</fullName>
    <description>Helper field for rolling up total campaign members</description>
    <label>Tech_TotalAttendies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>