force-app/main/default/objects/Event_Allocation__c/fields/Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted__c</fullName>
    <label>Waitlisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>