force-app/main/default/objects/Event_Allocation__c/validationRules/Reduce_number_of_hosts.validationRule-meta.xml
<ValidationRule>
    <fullName>Reduce_number_of_hosts</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(No_of_host__c) &amp;&amp; Seats_Reserved_All__c &gt; Capacity__c &amp;&amp;  NOT($Permission.Skip_Validations_Permission)</errorConditionFormula>
    <errorMessage>We don’t have enough seats available, please reduce the number of hosts.</errorMessage>
</ValidationRule>