force-app/main/default/objects/Event_Allocation__c/validationRules/Reserved_Seats_is_greater_than_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserved_Seats_is_greater_than_Capacity</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Seat_Reserved__c) &amp;&amp; (Seat_Reserved__c +  No_of_host__c) &gt; Capacity__c</errorConditionFormula>
    <errorMessage>We don’t have enough seat available, please reduce the number. TEST</errorMessage>
</ValidationRule>