force-app/main/default/objects/Event_Allocation__c/validationRules/Seat_allocation_to_a_lower_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Seat_allocation_to_a_lower_number</fullName>
    <active>false</active>
    <description>Cannot change  Seat allocation to a lower number</description>
    <errorConditionFormula>ISCHANGED(Capacity__c) &amp;&amp; (PRIORVALUE( Capacity__c ) &gt; Capacity__c)</errorConditionFormula>
    <errorMessage>Total Seat Capacity cannot be reduce.</errorMessage>
</ValidationRule>