force-app/main/default/objects/Event_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Specify_Other__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Location__c</field>
        <operation>equals</operation>
        <value>The Star Sydney</value>
    </filters>
    <label>All</label>
</ListView>